--- a/index.html
+++ b/index.html
@@ -11,59 +11,72 @@
 <body style="overflow-x: scroll">
             <div align="center">
             <h3>Time Curve Visualization</h3>
-            <div>
-            <div style="float:left">
-                <input type="checkbox" name=plotting" id="plotting" onchange="showDiv()">Open Plotting options
+            <div style="width:100%;">
+            <div  style="margin-left:10px; width:250px">
+                <label>Show/Hide Plotting Options</label>
+                <input type="checkbox" name="plotting" id="plotting" onchange="showDiv()">
                         </div>
-        <div id="plot_options">
+        <div id="plot_options" >
             <select name="plot_list1" id="plot_list1" onchange="updateData()">
                 <option value="0">Select 1st Variable</option>
             </select>
             <select name="plot_list2" id="plot_list2" onchange="updateData()">
-                <option value="0">Select 2nd Variables</option>
+                <option value="0">Select 2nd Variable</option>
             </select>
             <select name="plot_list3" id="plot_list3"  onchange="updateData()">
-                <option value="0">Select 3rd Variables</option>
+                <option value="0">Select 3rd Variable</option>
             </select>
       </div>
             </div>
-    <div style="width: 100%; overflow-x: scroll">
-    <div id="wrap" style="width: 600px; float: left;"></div>
-    <div id="container" style="margin-left: 620px;"></div>
+            <div style="width:100%; float:left">
+              <label>Show/Hide Filter Options</label>
+              <input type="checkbox" name="filtershow" id="filtershow" onchange="showDiv()" unchecked>
+      <div id="filters">
+                            <button class="button" type="button" id="filterbutton">Submit Filter Options</button>
+      </div>
+            <div >
+                <label>Show/Hide 3D Diagram</label>
+                <input type="checkbox" name="3D" id="3D" value="1" checked onchange="showfigure()">
+              </div>
+              <div>
+                <label>Colors</label>
+                <select name="element_color" id="element_color">
+                    <option value="o">Select an Element</option>
+                </select>
+                <select name="color_list" id="color_list" onchange="recolor()">
+                    <option value="128,0,0">Maroon</option>
+                    <option value="255,0,0">Red</option>
+                    <option value="255,165,0">Orange</option>
+                    <option value="255,255,0">Yellow</option>
+                    <option value="128,128,0">Olive</option>
+                    <option value="0,128,0">Green</option>
+                    <option value="128,0,128">Purple</option>
+                    <option value="255,0,255">Fuschia</option>
+                    <option value="0,255,0">Lime</option>
+                    <option value="0,128,128">Teal</option>
+                    <option value="0,255,255">Aqua</option>
+                    <option value="0,0,255">Blue</option>
+                    <option value="0,0,128">Navy</option>
+                    <option value="0,0,0">Black</option>
+                    <option value="128,128,128">Gray</option>
+                    <option value="192,192,192">Silver</option>
+                    <option value="255,255,255">White</option>
+                </select>
+              </div>
+                <div >
+                    <button class="button" type="button" id="clear">Clear Selection</button>
+                    <button class="button" type="button" id="writedata">Write Selection to File</button>
+                    <button class="button" type="button" id="writeframe">Export Selected Frames to File</button>
+                </div>
+
+    <div style="width: 100%;">
+      <div><img src="lib/legend.png" style="margin-left:-195px;width:100px;height:200px;position:absolute;"></div>
+    <div id="wrap" style="width: 500px; float: left; margin-left:0px;"></div>
+    <!-- <div id="container" style="margin-left: 520px; background-color:#bfcfec;width:500px;" ></div> -->
   </div>
-    <div>
-        <button class="button" type="button" id="clear">Clear Selection</button>
-        <button class="button" type="button" id="writedata">Write Selection to File</button>
-        <button class="button" type="button" id="writeframe">Export Selected Frames to File</button>
-    </div>
+
     <div id="footer">Loading</div>
-    <div>
-        <label>Show 3D diagram</label>
-        <input type="checkbox" name="3D" id="3D" value="1" checked onchange="showfigure()">
-        <label>Colors</label>
-        <select name="element_color" id="element_color">
-            <option value="o">Select an Element</option>
-        </select>
-        <select name="color_list" id="color_list" onchange="recolor()">
-            <option value="128,0,0">Maroon</option>
-            <option value="255,0,0">Red</option>
-            <option value="255,165,0">Orange</option>
-            <option value="255,255,0">Yellow</option>
-            <option value="128,128,0">Olive</option>
-            <option value="0,128,0">Green</option>
-            <option value="128,0,128">Purple</option>
-            <option value="255,0,255">Fuschia</option>
-            <option value="0,255,0">Lime</option>
-            <option value="0,128,128">Teal</option>
-            <option value="0,255,255">Aqua</option>
-            <option value="0,0,255">Blue</option>
-            <option value="0,0,128">Navy</option>
-            <option value="0,0,0">Black</option>
-            <option value="128,128,128">Gray</option>
-            <option value="192,192,192">Silver</option>
-            <option value="255,255,255">White</option>
-        </select>
-    </div>
+
 
 </div>
 	<script src="lib/d3.min.js"></script>
@@ -83,8 +96,13 @@
         var t0=1,t1=30;
         var scope = this;
         var loader = new THREE.XHRLoader( scope.manager );
+        var state = []; // Default only first variable selected
+        var CSVdata=[];
+        var CSVranges = [];
         loader.load( filename, function ( text ) {
             var top = text.split( "\n" )[0].split(",");
+            state = Array.apply(null, Array(top.length)).map(Number.prototype.valueOf,0);
+
             makeOptions("plot_list1");
             makeOptions("plot_list2");
             makeOptions("plot_list3");
@@ -96,37 +114,66 @@
                 el.value= i;
                 select.appendChild(el);
             }}
+
+            text=text.trim().split("\n");
+            var data=[],yo=[];
+            for (i=1;i<text.length;i++) {
+              data=text[i].split(",")
+              yo=[];
+              for (k=0;k<data.length;k++) {
+                if (data[k] !== undefined)
+                { yo.push(Number(data[k]))}
+              }
+              yo.push(i-1);
+              CSVdata.push(yo);
+            }
+            state[0] =1;
+            getglobalranges();
+            makefilters()
+            plotd3(MDScalculate(CSVdata));
         });
         var headlen = document.getElementById("plot_list1");
         var len = headlen.options.length;
-        var state = []; // Default only first variable selected
-         //t0 = $("#time-min").val();
-         //t1 = $("#time-max").val();
-        d3.csv(filename, function(data){
-            var select = document.getElementById("plot_list1");
-            var newdata=[];
-            keys= Object.keys(data);
-            for (i=0;i<select.options.length;i++){
-                newdata.push(data[keys[i]]);
-                state.push(0);
+            function getglobalranges() {
+              for (i=0;i<CSVdata[0].length;i++){ // for all columns, even the first time column
+                  var min = Infinity;
+                  var max = -Infinity;
+                  for (j=0;j<CSVdata.length;j++) {
+                      min = Math.min(min,CSVdata[j][i]);
+                      max = Math.max(max,CSVdata[j][i]);
+                  }
+                  CSVranges.push([min,max,Math.abs(max-min)]);
+              }
             }
-            state[0]=1;
-            return newdata;
-        }, function(error, rows) {
-            var length=rows[0].length;
-            var xrows=[];
-            for (i= t0-1;i<t1;i++) {
-                var yo=[];
-                for (k=0;k<length;k++) {
-                    if (rows[i][k] != undefined)
-                    {yo.push(rows[i][k]);}
-                }
-                yo.push(i);
-                xrows.push(yo);
+            function makefilters() {
+              var select=document.getElementById("plot_list1")
+              for (i=1;i<select.options.length;i++) {
+                var p= document.createElement("p");
+              var inp = document.createElement("input");
+              var text =select.options[i].textContent;
+              inp.type="number"; inp.id=text+'min';
+              inp.min=String(CSVranges[i-1][0]);inp.max=String(CSVranges[i-1][1]);inp.step="100";inp.value=String(CSVranges[i-1][0]);
+              var ilabel = document.createElement("label");
+              ilabel.innerHTML=text+' min';
+              ilabel.setAttribute("for",inp);
+              filters.appendChild(p);
+              filters.appendChild(ilabel);
+              filters.appendChild(inp);
+              var inp = document.createElement("input");
+              inp.type="number"; inp.id=text+"max";
+              inp.min=String(CSVranges[i-1][0]);inp.max=String(CSVranges[i-1][1]);inp.step="100";inp.value=String(CSVranges[i-1][1]);
+              var ilabel = document.createElement("label");
+              ilabel.innerHTML=text+" max";
+              ilabel.setAttribute("for",inp);
+              filters.appendChild(ilabel);
+              filters.appendChild(inp);
             }
-            plotd3(MDScalculate(xrows,state),xrows,state);
-        });
-
+            }
+            d3.select("#filterbutton").on("click", function() {
+              d3.select("svg").remove();
+              plotd3(MDScalculate(CSVdata));
+            });
+            showDiv()
         var camera, scene, renderer;
         var controls;
         var root;
@@ -146,7 +193,8 @@
         var xbox =0,ybox=0,zbox=0;
         var colorSpriteMap = {};
         var baseSprite = {};
-        var CPK = { "h": [ 255,255,255 ], "c": [ 0,128,128 ], "n": [ 255,0,0 ], "at": [ 128,128,0 ], "si": [ 0,128,128 ] };
+        var CPK = { "h": [ 255,255,255 ], "c": [ 0,0,0 ], "n": [ 0,0,255 ], "o": [ 255,0,0 ], "s": [ 0,128,128 ] };
+        var CPKsize = { "h": 1, "c": 1.5, "n": 1.3, "o": 1.3 };
 
         init(framenum);
         animate();
