--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>Visualizing Molecular Dynamics Simulation</title>
 <body style="overflow-x: scroll">
             <div align="center">
-            <h3>Time Curve Visualization</h3>
+            <h3>Exploratory Data Analysis Tool for Molecular Simulation Data</h3>
             <div style="width:100%;">
             <div  style="margin-left:10px; width:250px">
                 <label>Show/Hide Plotting Options</label>
