--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body style="overflow-x: scroll">
             <div align="center">
             <h3>Exploratory Data Analysis Tool for Molecular Simulation Data</h3>
+                        <p>Start by choosing 3 variables of the same name, 2 same and 1 different or 3 different variables. Interact with the 2D plot below.
+            Distance between dots represent the similarity of the selected variables at different times. Time is indicated by colors, see legend. Open filtering options to
+            select the range of data that you are interested in. click and drag your mouse around points to select them - and write them out to files of your choice.
+            Click on a dot to see the 3D structure of the simulation at the time represented by the dot</p>
             <div style="width:100%;">
             <div  style="margin-left:10px; width:250px">
                 <label>Show/Hide Plotting Options</label>
